<?xml version="1.0" encoding="UTF-8" ?>
<package>
  <name>dummy_laser_odom</name>
  <version>0.1.8</version>
  <description>The dummy_laser_odom package

  </description>

  <maintainer email="zgh200701@163.com">Edward Zhang</maintainer>


  <license>BSD</license>


  <author email="zgh200701@163.com">Edward Zhang</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>
  </export>
</package>
